first layout components

--- a/client/client/src/app/pages/product-list/components/product-list-item/product-list-item.component.html
+++ b/client/client/src/app/pages/product-list/components/product-list-item/product-list-item.component.html
@@ -1,3 +1,8 @@
-<p>
-  product-list-item works!
-</p>
+<mat-card class="product-card">
+  <mat-card-header>
+    <mat-card-title>{{product.name}}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content>
+
+  </mat-card-content>
+</mat-card>
