basic layout, false scaling

--- a/client/client/src/app/app.component.html
+++ b/client/client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>Webshop</span>
+  <span>Webshop 1:1000000</span>
 </mat-toolbar>
 <div class="content">
   <router-outlet></router-outlet>
