--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -1,13 +1,17 @@
-<mat-grid-list cols="{{columns}}" rowHeight="2:1" gutterSize="20px">
+<mat-grid-list cols="{{columns}}" gutterSize="20px" rowHight="200px" class="product-list">
     <mat-grid-tile [routerLink]="product._id" *ngFor="let product of products">
-      <<mat-card>
+      <mat-card>
           <mat-card-header>
               <mat-card-title>{{product.name}}</mat-card-title>
               <mat-card-subtitle>Subtitle</mat-card-subtitle>
           </mat-card-header>
-          <img matCardImage src="Card wide image source">
+          <img matCardImage src="https://material.angular.io/assets/img/examples/shiba2.jpg">
           <mat-card-content>
-              Text content
+              <p>
+              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+               bred for hunting.
+              </p>
           </mat-card-content>
           <mat-card-actions align="start">
               <button mat-button (click)="onAction1">Action1</button>
