--- a/client/client/src/app/pages/product-list/product-list.component.css
+++ b/client/client/src/app/pages/product-list/product-list.component.css
@@ -1,7 +1,16 @@
 .product-card {
   max-width: 400px;
-  min-width: 200px;
-  max-height: 600px;
-  min-height: 400px;
+}
 
+.product-list {
+  width: 93%;
+  margin: 20px auto;
+  margin-top: 60px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  min-width: 300px;
+  min-height: auto;
 }
