--- a/client/client/src/app/pages/product-list/product-list.component.css
+++ b/client/client/src/app/pages/product-list/product-list.component.css
@@ -1,16 +1,36 @@
+
 .product-card {
   max-width: 400px;
+  max-height: 700px;
+  border-radius: 1rem;
+  margin: 5%;
 }
 
-.product-list {
-  width: 93%;
-  margin: 20px auto;
-  margin-top: 60px;
-}
-
-img {
+.img {
   width: 100%;
   height: 100%;
-  min-width: 300px;
+  min-width: 200px;
   min-height: auto;
+}
+
+
+@media (min-width: 501px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
+
+}
+
+@media (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: flex-start;
+  }
 }
