--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -1,6 +1,6 @@
-<mat-grid-list cols="{{columns}}" gutterSize="20px" rowHight="200px" class="product-list">
-    <mat-grid-tile [routerLink]="product._id" *ngFor="let product of products">
-      <mat-card>
+<div class="container" fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center" fxLayoutGap="10px" fxLayoutAlign="start stretch">
+    <div *ngFor="let product of products" fxFlex="80%" >
+      <mat-card class="product-card" fxFlex>
           <mat-card-header>
               <mat-card-title>{{product.name}}</mat-card-title>
               <mat-card-subtitle>Subtitle</mat-card-subtitle>
@@ -14,12 +14,12 @@
               </p>
           </mat-card-content>
           <mat-card-actions align="start">
-              <button mat-button (click)="onAction1">Action1</button>
+              <button mat-button>Action1</button>
 
           </mat-card-actions>
           <mat-card-footer>
               Footer
           </mat-card-footer>
       </mat-card>
-      </mat-grid-tile>
-</mat-grid-list>
+    </div>
+</div>
