chage product card styling

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -14,11 +14,11 @@
               </p>
           </mat-card-content>
           <mat-card-actions align="start">
-              <button mat-button>Action1</button>
+              <button mat-flat-button color="primary">Action1</button>
 
           </mat-card-actions>
           <mat-card-footer>
-              Footer
+
           </mat-card-footer>
       </mat-card>
     </div>
