change example picture, resize product box

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -5,16 +5,18 @@
               <mat-card-title>{{product.name}}</mat-card-title>
               <mat-card-subtitle>Subtitle</mat-card-subtitle>
           </mat-card-header>
-          <img matCardImage src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+          <img matCardImage src="https://images.pexels.com/photos/776656/pexels-photo-776656.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
           <mat-card-content>
               <p>
-              The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-              A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-               bred for hunting.
+              description
+              <br>
+              <br>
+              <br>
+              <br>
               </p>
           </mat-card-content>
           <mat-card-actions align="start">
-              <button mat-flat-button color="primary">Action1</button>
+              <button mat-flat-button color="primary">Add to Cart</button>
 
           </mat-card-actions>
           <mat-card-footer>
