--- a/client/client/src/app/pages/product-list/product-list.component.css
+++ b/client/client/src/app/pages/product-list/product-list.component.css
@@ -1,3 +1,20 @@
+.shopping-icon {
+  padding: 0 14px;
+}
+
+.spacer {
+  flex: 1 1 auto;
+  width: 2%;
+}
+
+
+.searchBar {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2ex;
+  width: 80%;
+}
 
 .product-card {
   max-width: 300px;
@@ -30,6 +47,6 @@
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
   }
 }
