--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -1,3 +1,16 @@
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+    <span>Webshop 1:1000000</span>
+  <span class="spacer"></span>
+  <mat-icon class="shopping-icon">shopping_cart</mat-icon>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-form-field class="searchBar" appearance="outline">
+    <input matInput placeholder="Search">
+  </mat-form-field>
+
 <div class="container">
     <div *ngFor="let product of splicedData">
       <mat-card class="product-card">
