Added Service Methods

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -21,7 +21,7 @@
           <img matCardImage src="https://images.pexels.com/photos/776656/pexels-photo-776656.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
           <mat-card-content>
               <p>
-              description
+              {{product.description}}
               <br>
               <br>
               <br>
