--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -16,24 +16,19 @@
       <mat-card class="product-card">
           <mat-card-header>
               <mat-card-title>{{product.name}}</mat-card-title>
-              <mat-card-subtitle>Subtitle</mat-card-subtitle>
+              <mat-card-subtitle>Verfügbar: {{product.quantity}}</mat-card-subtitle>
           </mat-card-header>
-          <img matCardImage src="https://images.pexels.com/photos/776656/pexels-photo-776656.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+          <img matCardImage src="{{product.image}}">
           <mat-card-content>
-              <p>
-              description
-              <br>
-              <br>
-              <br>
-              <br>
-              </p>
+              {{product.description}}<br>
+
           </mat-card-content>
           <mat-card-actions align="start">
-              <button mat-flat-button color="primary">Add to Cart</button>
+              <button mat-stroked-button color="primary">In den Einkaufswagen</button>
 
           </mat-card-actions>
-          <mat-card-footer>
-
+          <mat-card-footer class="product-card-footer">
+            {{product.unitPrice}}€
           </mat-card-footer>
       </mat-card>
     </div>
