first items on dashboard page

--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,17 @@
-<p>
-  dashboard works!
-</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+    <span>Webshop 1:1000000</span>
+  <span class="spacer"></span>
+  <mat-icon class="shopping-icon">shopping_cart</mat-icon>
+    </mat-toolbar-row>
+</mat-toolbar>
+
+<mat-form-field class="searchBar" appearance="outline">
+    <input matInput placeholder="Search">
+  </mat-form-field>
+
+<div class="buttons">
+   <button mat-stroked-button color="primary">Produkt hinzufügen</button>
+   <button mat-stroked-button color="primary">Produkt hinzufügen</button>
+</div>
