--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -3,7 +3,7 @@
     <mat-toolbar-row>
     <span>Webshop 1:1000000</span>
   <span class="spacer"></span>
-  <mat-icon class="shopping-icon">shopping_cart</mat-icon>
+  <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
     </mat-toolbar-row>
 </mat-toolbar>
 
