--- a/client/client/src/app/pages/dashboard/dashboard.component.css
+++ b/client/client/src/app/pages/dashboard/dashboard.component.css
@@ -10,6 +10,18 @@
   margin: 5%;
 }
 
+.order-card {
+  max-width: 300px;
+  max-height: 700px;
+  border-radius: 1rem;
+  margin: 5%;
+}
+
+.card-footer {
+  margin-left: auto;
+  margin-bottom: auto;
+}
+
 .img {
   width: 100%;
   height: 100%;
@@ -17,48 +29,43 @@
   min-height: auto;
 }
 
-.product-card-footer {
-  margin-left: auto;
-  margin-bottom: auto;
-}
 
-@media (min-width: 501px) {
-  .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: center;
-    align-items: center;
-
-  }
+@media (min-width: 701px) {
 
   .buttons {
     display: flex;
     flex-direction: row;
     flex: wrap;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     margin: 2ex;
   }
 
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .functions {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
   .searchBar {
-    margin-left: auto;
+    margin-left: 2ex;
     margin-right: auto;
     margin-top: 2ex;
-    width: 100%;
+    width: 90%;
   }
-
-  .products {
-    width: 100%;
-  }
-
-  .orders {
-    width: 100%;
-  }
-
 }
 
-@media (max-width: 500px) {
+@media (max-width: 700px) {
   .container {
     display: flex;
     flex-direction: column;
@@ -69,16 +76,24 @@
 
   .buttons {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex: wrap;
     justify-content: space-evenly;
     align-items: center;
     margin: 2ex;
   }
 
+  .functions {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+
   .searchBar {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 2ex;
+    margin-right: 2ex;
     margin-top: 0ex;
     width: 100%;
   }
