--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -1,3 +1,39 @@
-<p>
-  cart works!
-</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Webshop 1:1000000</span>
+    <span class="spacer"></span>
+    <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
+
+<div class="container">
+  <div class="content" *ngFor="let product of splicedData">
+    <mat-card class="product-card">
+      <mat-card-header>
+        <mat-card-title>{{product.name}}</mat-card-title>
+        <mat-card-subtitle>Subtitle</mat-card-subtitle>
+      </mat-card-header>
+      <img matCardImage src="https://images.pexels.com/photos/776656/pexels-photo-776656.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+      <mat-card-content>
+        <p>
+          {{product.description}}
+          <br>
+          <br>
+          <br>
+          <br>
+        </p>
+        <p>
+          {{product.unitPrice}}
+        </p>
+      </mat-card-content>
+
+      <mat-card-footer>
+      </mat-card-footer>
+    </mat-card>
+    <mat-card-actions class="buttonProduct" align="start">
+      <button mat-flat-button color="primary">Weiter Shoppen</button>
+      <button (click)="onBackClicked()" mat-flat-button color="primary">Delete</button>
+    </mat-card-actions>
+  </div>
+</div>
