--- a/client/client/src/app/pages/cart/cart.component.css
+++ b/client/client/src/app/pages/cart/cart.component.css
@@ -1,3 +1,22 @@
+.container {
+
+margin: auto;
+}
+
+.leftCon {
+
+  border-style: solid;
+  border-width: 5px;
+  margin-right: 30%;
+  margin-top: 20px;
+}
+
+.rightCon {
+  border-style: solid;
+  border-width: 5px;
+  margin-left: 70%;
+}
+
 .shopping-icon {
   padding: 0 14px;
 }
@@ -7,33 +26,13 @@
   width: 2%;
 }
 
-.content {
-  margin-top: 30px;
-  margin-left: 30px;
-}
-
-.container {
-  border-style: solid;
-  border-width: 3px;
-  border-color: cadetblue;
-  margin-right: 30%;
-  margin-top: 20px;
-}
-.buttonProduct {
-  margin-left: 30px;
-}
-
-.searchBar {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2ex;
-  width: 80%;
+.buttons {
+  margin-left: 20px;
 }
 
 .product-card {
   max-width: 300px;
-  max-height: 300px;
+  max-height: 700px;
   border-radius: 1rem;
   margin: 5%;
 }
@@ -45,23 +44,9 @@
   min-height: auto;
 }
 
-@media (min-width: 501px) {
-  .container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: flex-start;
-  }
-
+.product-card-footer {
+  margin-left: auto;
+  margin-bottom: auto;
 }
 
-@media (max-width: 500px) {
-  .container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: center;
-  }
-}
+
