--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -34,6 +34,14 @@
   </div>
 </div>
   <div class="rightCon">
-    <p>asd</p>
+    <p>Summe:</p>
+    <div>
+      {{product.unitPrice}}€
+    </div>
+
+    <div class="buttons">
+      <button mat-stroked-button color="primary">Zur Kasse gehen</button>
+    </div>
+
   </div>
 </div>
