--- a/client/client/src/app/pages/cart/cart.component.css
+++ b/client/client/src/app/pages/cart/cart.component.css
@@ -1,20 +1,25 @@
-.container {
 
-margin: auto;
-}
 
 .leftCon {
 
-  border-style: solid;
-  border-width: 5px;
-  margin-right: 30%;
-  margin-top: 20px;
+  /* display: flex; */
+
+  /* margin-right: 45%; */
+  width: 60%;
+  /* flex-direction: column; */
+  display: flex;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+
 }
 
 .rightCon {
-  border-style: solid;
-  border-width: 5px;
-  margin-left: 70%;
+
+  display: flex;
+  align-items: flex-start;
+  width: 25%;
 }
 
 .shopping-icon {
@@ -48,5 +53,32 @@ margin: auto;
   margin-left: auto;
   margin-bottom: auto;
 }
+@media (min-width: 501px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
 
+}
+
+@media (min-width: 501px) {
+  .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+}
+
+@media (max-width: 500px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 
