--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -8,6 +8,7 @@
 </mat-toolbar>
 
 <mat-form-field class="searchBar" appearance="outline">
+    <mat-label>Suchen</mat-label>
     <input matInput placeholder="Search">
   </mat-form-field>
 
