--- a/client/client/src/app/pages/product-list/product-list.component.css
+++ b/client/client/src/app/pages/product-list/product-list.component.css
@@ -41,7 +41,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   }
 
 }
