--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -29,7 +29,7 @@
 
           </mat-card-actions>
           <mat-card-footer class="product-card-footer">
-            {{product.unitPrice}}€
+            {{product.unitPrice/100 | currency:'EUR':'symbol'}}
           </mat-card-footer>
       </mat-card>
     </div>
