--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
@@ -8,7 +8,7 @@
 }
 
 .content {
-  margin: auto;
+
 }
 
 .searchBar {
@@ -20,8 +20,8 @@
 }
 
 .product-card {
-  max-width: 700px;
-  max-height: 700px;
+  max-width: 500px;
+  max-height: 500px;
   border-radius: 1rem;
   margin: 5%;
 }
@@ -38,7 +38,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
   }
 
@@ -48,8 +48,8 @@
   .container {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
   }
 }
