--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
@@ -13,16 +13,14 @@
     <mat-card class="product-card">
       <mat-card-header>
         <mat-card-title>{{product.name}}</mat-card-title>
-        <mat-card-subtitle>Subtitle</mat-card-subtitle>
+        <mat-card-subtitle>Verfügbar: {{product.quantity}}</mat-card-subtitle>
       </mat-card-header>
-      <img matCardImage src="https://images.pexels.com/photos/776656/pexels-photo-776656.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+      <img matCardImage src="{{product.image}}">
+
       <mat-card-content>
         <p>
           {{product.description}}
-          <br>
-          <br>
-          <br>
-          <br>
+
         </p>
       </mat-card-content>
       <mat-card-actions align="start">
