passing query params

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -23,7 +23,7 @@
           </mat-card-header>
           <img matCardImage src="{{product.image}}">
           <mat-card-actions align="start">
-            <button (click)="viewProduct()" mat-stroked-button color="primary">Produkt näher ansehen</button>
+            <button (click)="viewProduct(product._id)" mat-stroked-button color="primary">Produkt näher ansehen</button>
             <br>
             <br>
             <button mat-stroked-button color="primary">In den Einkaufswagen</button>
