fix product detail bug

--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
@@ -9,7 +9,7 @@
 
 
 <div class="container">
-  <div class="content" *ngFor="let product of splicedData">
+  <div class="content" *ngFor="let product of products">
     <mat-card class="product-card">
       <mat-card-header>
         <mat-card-title>{{product.name}}</mat-card-title>
