Added some Functions and Text

--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -31,7 +31,7 @@
             <button mat-stroked-button color="primary">In den Einkaufswagen</button>
           </mat-card-actions>
           <mat-card-footer class="product-card-footer">
-            {{product.unitPrice/100 | currency:'EUR':'symbol'}}
+            Preis: {{product.unitPrice/100 | currency:'EUR':'symbol'}}
           </mat-card-footer>
       </mat-card>
     </div>
