--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
@@ -19,6 +19,11 @@
   width: 80%;
 }
 
+.product-card-footer {
+  margin-left: auto;
+  margin-bottom: auto;
+}
+
 .product-card {
   max-width: 500px;
   max-height: 500px;
