--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
@@ -3,7 +3,7 @@
   <mat-toolbar-row>
     <span>Webshop 1:1000000</span>
     <span class="spacer"></span>
-    <mat-icon class="shopping-icon">shopping_cart</mat-icon>
+    <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 
@@ -20,15 +20,18 @@
       <mat-card-content>
         <p>
           {{product.description}}
+
         </p>
+        <mat-card-footer class="product-card-footer">
+          Preis: {{product.unitPrice/100 | currency:'EUR':'symbol'}}
+        </mat-card-footer>
       </mat-card-content>
+
       <mat-card-actions align="start">
         <button mat-flat-button color="primary">Add to Cart</button>
         <button (click)="onBackClicked()" mat-flat-button color="primary">Back</button>
       </mat-card-actions>
-      <mat-card-footer>
 
-      </mat-card-footer>
     </mat-card>
   </div>
 </div>
