--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.css
@@ -1,3 +1,10 @@
+.actions {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
 .shopping-icon {
   padding: 0 14px;
 }
@@ -5,10 +12,6 @@
 .spacer {
   flex: 1 1 auto;
   width: 2%;
-}
-
-.content {
-
 }
 
 .searchBar {
@@ -26,16 +29,9 @@
 
 .product-card {
   max-width: 500px;
-  max-height: 500px;
+  max-height: 1000px;
   border-radius: 1rem;
   margin: 5%;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-  min-width: 200px;
-  min-height: auto;
 }
 
 @media (min-width: 501px) {
