--- a/client/client/src/app/pages/product-list/product-list.component.css
+++ b/client/client/src/app/pages/product-list/product-list.component.css
@@ -1,3 +1,14 @@
+.actions {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.button {
+  margin-top: 2ex;
+}
+
 .shopping-icon {
   padding: 0 14px;
 }
@@ -6,7 +17,6 @@
   flex: 1 1 auto;
   width: 2%;
 }
-
 
 .searchBar {
   display: block;
@@ -18,16 +28,9 @@
 
 .product-card {
   max-width: 300px;
-  max-height: 700px;
+  max-height: 1000px;
   border-radius: 1rem;
   margin: 5%;
-}
-
-.img {
-  width: 100%;
-  height: 100%;
-  min-width: 200px;
-  min-height: auto;
 }
 
 .product-card-footer {
