buttons to german

--- a/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
+++ b/client/client/src/app/pages/product-item-detail/product-item-detail.component.html
@@ -22,8 +22,8 @@
 
       </mat-card-content>
         <mat-card-actions align="start" class="actions">
-          <button mat-stroked-button color="primary">Add to Cart</button>
-          <button (click)="onBackClicked()" mat-stroked-button color="primary">Back</button>
+          <button mat-stroked-button color="primary">In den Einkaufswagen</button>
+          <button (click)="onBackClicked()" mat-stroked-button color="primary">Zurück</button>
         </mat-card-actions>
 
         <mat-card-footer class="product-card-footer">
