--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -1,3 +1,67 @@
-<p>
-  checkout works!
-</p>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Webshop 1:1000000</span>
+    <span class="spacer"></span>
+    <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
+<h1>Ihre Bestellung</h1>
+<div class="container">
+    <div *ngFor="let product of splicedData">
+      <mat-card class="product-card">
+        <mat-card-header>
+          <mat-card-title>{{product.name}}</mat-card-title>
+        </mat-card-header>
+        <img matCardImage src="{{product.image}}">
+        <mat-card-content>
+          {{product.description}}<br>
+
+        </mat-card-content>
+        <mat-card-actions align="start">
+          <button mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+
+        </mat-card-actions>
+        <mat-card-footer class="product-card-footer">
+          {{product.unitPrice}}€
+        </mat-card-footer>
+      </mat-card>
+    </div>
+
+  </div>
+<div class="buttons">
+  <button mat-stroked-button color="primary">Jetzt Bezahlen</button>
+</div>
+
+
+<div class="example-container">
+  <h4>Persönliche Angaben: </h4>
+  <mat-form-field>
+    <input matInput placeholder="Vorname:">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Nachname:">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="E-Mail:">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Tel.Nummer: ">
+  </mat-form-field>
+
+  <br>
+  <h4>Adressangaben: </h4>
+  <mat-form-field>
+    <input matInput placeholder="Straße und Hausnummer: ">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Stadt: ">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Postleitzahl: ">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Land/Region: ">
+  </mat-form-field>
+
+</div>
