Added Checkout Html and CSS (needs to be finished)

--- a/client/client/src/app/pages/checkout/checkout.component.css
+++ b/client/client/src/app/pages/checkout/checkout.component.css
@@ -11,8 +11,11 @@
   float:right;
 }
 .container{
+  width: 50%;
+  flex-direction: column;
+  float: right;
   display: flex;
-
+  justify-content: end;
 }
 
 .product-card {
