--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -13,7 +13,7 @@
 </div>
 <div class="container">
   <div class="leftCon">
-  <div *ngFor="let product of splicedData">
+  <div *ngFor="let product of cart">
     <mat-card class="product-card">
       <mat-card-header>
         <mat-card-title>{{product.name}}</mat-card-title>
