--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -26,7 +26,7 @@
             <button (click)="viewProduct()" mat-stroked-button color="primary">Produkt näher ansehen</button>
             <br>
             <br>
-            <button mat-stroked-button color="primary">In den Einkaufswagen</button>
+            <button (click)="addProductToCart(product)" mat-stroked-button color="primary">In den Einkaufswagen</button>
           </mat-card-actions>
           <mat-card-footer class="product-card-footer">
             {{product.unitPrice/100 | currency:'EUR':'symbol'}}
