--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -3,13 +3,13 @@
   <mat-toolbar-row>
     <span>Webshop 1:1000000</span>
     <span class="spacer"></span>
-    <mat-icon (click)="onShoppingCartClicked()" class="shopping-icon">shopping_cart</mat-icon>
+    <mat-icon class="shopping-icon">shopping_cart</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 <br>
 <br>
 <div class="buttons">
-  <button mat-stroked-button color="primary">Weiter Shoppen</button>
+  <button routerLink="/products" mat-stroked-button color="primary">Weiter Shoppen</button>
 </div>
 <div class="container">
   <div class="leftCon">
@@ -24,7 +24,7 @@
 
       </mat-card-content>
       <mat-card-actions align="start">
-        <button mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+        <button (click)="removeProdcut(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
 
       </mat-card-actions>
       <mat-card-footer class="product-card-footer">
