added badge for counting items in the cart

--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -3,7 +3,7 @@
   <mat-toolbar-row>
     <span>Webshop 1:1000000</span>
     <span class="spacer"></span>
-    <mat-icon class="shopping-icon">shopping_cart</mat-icon>
+    <mat-icon matBadge="{{cartCount}}" matBadgePosition="before" matBadgeColor="accent"  class="shopping-icon">shopping_cart</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
 <br>
