products can be added. (form validation fail)

--- a/client/client/src/app/pages/dashboard/dashboard.component.css
+++ b/client/client/src/app/pages/dashboard/dashboard.component.css
@@ -29,6 +29,27 @@
   min-height: auto;
 }
 
+.add-product {
+  display: flex;
+  flex-direction: column;
+}
+
+.add-product > * {
+  width: 100%;
+}
+
+.new-product-input{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.product-field{
+  width:100%;
+}
+mat-form-field{
+  width:100%;
+}
+
 @media (min-width: 501px) {
   .buttons {
     display: flex;
