--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -11,8 +11,11 @@
   <mat-tab label="Produkte">
     <div class="functions">
       <div class="buttons">
-        <button mat-stroked-button color="primary">Produkt hinzufügen</button>
+        <button routerLink="/addproduct" mat-stroked-button color="primary">Produkt hinzufügen</button>
+      
+        
       </div>
+   
       <mat-form-field class="searchBar" appearance="outline">
         <mat-label>Suchen</mat-label>
         <input matInput placeholder="Suchen">
