--- a/client/client/src/app/pages/add-product/add-product.component.css
+++ b/client/client/src/app/pages/add-product/add-product.component.css
@@ -14,12 +14,40 @@
       align-content: center;
   }
 
-  button{
+  .button{
     width: 70%;
     align-content: center;
+    display: flex;
+    flex-direction: row;
+  }
+  #add{
+    flex-grow: 2;
+  }
+  #back{
+    margin-left: 1em;
+    flex-grow: 1;
   }
 
   h2{
       margin-left: 35%;
+  }
+
+  @media screen and (max-width:550px){
+    .button{
+      flex-direction: column;
+      align-items: center;
+    }
+
+    #add{
+      flex-grow: 1;
+      width: 100%;
+    }
+    #back{
+      width: 100%;
+      margin-top: 1em;
+      flex-grow: 1;
+      margin-left: 0%;
+    }
+    
   }
 
