--- a/client/client/src/app/pages/add-product/add-product.component.html
+++ b/client/client/src/app/pages/add-product/add-product.component.html
@@ -12,15 +12,15 @@
   <mat-form-field>
     <input matInput required name="name" minlength="10" [(ngModel)]="product.name" placeholder="Name" #prodName="ngModel">
     <div class = "alert alert-danger" *ngIf="prodName.touched && !prodName.valid" >
-        <div *ngIf="prodName.errors.required"></div>
-        <div *ngIf="prodName.errors.minlength">Name soll mindestens 10 Symbole enthalten</div>
+        <div *ngIf="prodName.errors?.required"></div>
+        <div *ngIf="prodName.errors?.minlength">Name soll mindestens 10 Symbole enthalten</div>
   </div>
   </mat-form-field>
   <mat-form-field>
     <textarea matInput required name="description" rows="5" minlength="100" [(ngModel)]="product.description" placeholder="Beschreibung" #prodDescription="ngModel"></textarea>
     <div class = "alert alert-danger" *ngIf="prodDescription.touched && !prodDescription.valid" >
-        <div *ngIf="prodDescription.errors.required"></div>
-        <div *ngIf="prodDescription.errors.minlength">Beschreibeung soll mindestens 100 Symbole enthalten</div>
+        <div *ngIf="prodDescription.errors?.required"></div>
+        <div *ngIf="prodDescription.errors?.minlength">Beschreibeung soll mindestens 100 Symbole enthalten</div>
   </div>
   </mat-form-field>
   
@@ -36,8 +36,10 @@
 
   <mat-form-field>
     <input matInput required name="image" [(ngModel)]="product.image" placeholder="Bild URL" #prodImage="ngModel">
-    <div *ngIf="prodImage.errors.required"></div>
+    <div *ngIf="prodImage.errors?.required"></div>
   </mat-form-field>
-
-  <button routerLink="/products" (click)="onSaveClicked()" mat-stroked-button color="primary">Produkt hinzufügen</button>
+  <div class="button">
+  <button id="add" (click)="onSaveClicked()" mat-stroked-button color="primary">Produkt hinzufügen</button>
+  <button id="back" routerLink="/dashboard" mat-stroked-button color="primary">Zurück</button>
+</div>
 </div>
