--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -24,7 +24,7 @@
 
       </mat-card-content>
       <mat-card-actions align="start">
-        <button (click)="removeProdcut(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+        <button (click)="removeProduct(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
 
       </mat-card-actions>
       <mat-card-footer class="product-card-footer">
