--- a/client/client/src/app/pages/product-list/product-list.component.html
+++ b/client/client/src/app/pages/product-list/product-list.component.html
@@ -26,7 +26,7 @@
           </mat-card-content>
           <mat-card-actions align="start" class="actions">
             <button (click)=" viewProduct(product._id)" mat-stroked-button color="primary" class="button">Produkt näher ansehen</button>
-            <button mat-stroked-button color="primary" class="button">In den Einkaufswagen</button>
+            <button (click)="addProductToCart(product)" mat-stroked-button color="primary" class="button">In den Einkaufswagen</button>
           </mat-card-actions>
           <mat-card-footer class="product-card-footer">
             Preis: {{product.unitPrice/100 | currency:'EUR':'symbol'}}
