--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -34,7 +34,7 @@
 
           </mat-card-content>
           <mat-card-actions align="start">
-            <button mat-stroked-button color="primary">Bearbeiten</button>
+            <button routerLink="/dashboard/{{product._id}}" mat-stroked-button color="primary">Bearbeiten</button>
 
           </mat-card-actions>
           <mat-card-footer class="card-footer">
