--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -25,20 +25,20 @@
       <div *ngFor="let product of splicedDataProducts">
         <mat-card class="product-card">
           <mat-card-header>
-            <mat-card-title>{{product.name}}</mat-card-title>
-            <mat-card-subtitle>Verfügbar: {{product.quantity}}</mat-card-subtitle>
+            <mat-card-title>{{product?.name}}</mat-card-title>
+            <mat-card-subtitle>Verfügbar: {{product?.quantity}}</mat-card-subtitle>
           </mat-card-header>
-          <img matCardImage src="{{product.image}}">
+          <img matCardImage src="{{product?.image}}" alt="Produkt Bild">
           <mat-card-content>
-            {{product.description}}<br>
+            {{product?.description}}<br>
 
           </mat-card-content>
           <mat-card-actions align="start">
-            <button routerLink="/dashboard/{{product._id}}" mat-stroked-button color="primary">Bearbeiten</button>
+            <button routerLink="/dashboard/{{product?._id}}" mat-stroked-button color="primary">Bearbeiten</button>
 
           </mat-card-actions>
           <mat-card-footer class="card-footer">
-            {{product.unitPrice/100 | currency:'EUR':'symbol'}}
+            {{product?.unitPrice/100 | currency:'EUR':'symbol'}}
           </mat-card-footer>
         </mat-card>
       </div>
@@ -63,7 +63,7 @@
             <mat-card-title>Bestellung</mat-card-title>
             <mat-card-subtitle>{{order}}</mat-card-subtitle>
           </mat-card-header>
-          <img matCardImage src="">
+          <img matCardImage src="" alt="">
           <mat-card-content>
             description<br>
 
