addded delete product (result can be seen only after reload)

--- a/client/client/src/app/pages/dashboard/dashboard.component.css
+++ b/client/client/src/app/pages/dashboard/dashboard.component.css
@@ -50,6 +50,10 @@ mat-form-field{
   width:100%;
 }
 
+#deleteBtn{
+  margin-left: 2%;
+}
+
 @media (min-width: 501px) {
   .buttons {
     display: flex;
