--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -8,26 +8,26 @@
 </mat-toolbar>
 <h1>Ihre Bestellung</h1>
 <div class="container">
-    <div *ngFor="let product of splicedData">
+  <div class="leftCon">
+    <div *ngFor="let product of cart">
       <mat-card class="product-card">
         <mat-card-header>
-          <mat-card-title>{{product.name}}</mat-card-title>
+          <mat-card-title>{{product?.name}}</mat-card-title>
         </mat-card-header>
-        <img matCardImage src="{{product.image}}">
+        <img matCardImage src="{{product?.image}}" alt="Produkt Bild">
         <mat-card-content>
-          {{product.description}}<br>
+          {{product?.description}}<br>
 
         </mat-card-content>
         <mat-card-actions align="start">
-          <button mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
+          <button (click)="removeProduct(product)" mat-stroked-button color="primary">Aus dem Warenkorb entfernen</button>
 
         </mat-card-actions>
         <mat-card-footer class="product-card-footer">
-          {{product.unitPrice}}€
+          Preis: {{product?.unitPrice/100 | currency:'EUR':'symbol'}}
         </mat-card-footer>
       </mat-card>
     </div>
-
   </div>
 
 
