--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="buttons">
-      <button mat-stroked-button color="primary">Zur Kasse gehen</button>
+      <button (click)=" goToPayment()" mat-stroked-button color="primary">Zur Kasse gehen</button>
     </div>
 
   </div>
