--- a/client/client/src/app/pages/checkout/checkout.component.html
+++ b/client/client/src/app/pages/checkout/checkout.component.html
@@ -29,7 +29,7 @@
       </mat-card>
     </div>
   </div>
-
+</div>
 
 
 <div class="example-container">
@@ -66,4 +66,5 @@
   <div class="buttons">
     <button mat-stroked-button color="primary">Jetzt Bezahlen</button>
   </div>
+  <br>
 </div>
