cart: sum of all products in cart

--- a/client/client/src/app/pages/cart/cart.component.html
+++ b/client/client/src/app/pages/cart/cart.component.html
@@ -34,9 +34,9 @@
   </div>
 </div>
   <div class="rightCon">
-    <p>Summe:</p>
+    <p>Summe: {{sum/100 | currency:'EUR':'symbol'}}</p>
     <div>
-      {{product?.unitPrice}}€
+
     </div>
 
     <div class="buttons">
