--- a/client/client/src/app/pages/dashboard/dashboard.component.html
+++ b/client/client/src/app/pages/dashboard/dashboard.component.html
@@ -56,24 +56,41 @@
         <input matInput placeholder="Suchen">
       </mat-form-field>
     </div>
-    <div class="container">
+    <div class="order-container">
       <div *ngFor="let order of splicedDataOrders">
         <mat-card class="order-card">
+          <!--
           <mat-card-header>
-            <mat-card-title>Bestellung</mat-card-title>
+            <mat-card-title>{{order?.date | date : "d MMM, y HH:mm"}} an {{order?.orderer.firstname}} {{order?.orderer.lastname}}</mat-card-title>
             <mat-card-subtitle>{{order}}</mat-card-subtitle>
           </mat-card-header>
           <img matCardImage src="" alt="">
+          -->
           <mat-card-content>
-            description<br>
+            <h2>{{order?.date | date : "d MMM, y HH:mm"}} an {{order?.orderer.firstname}} {{order?.orderer.lastname}}</h2>
+            <h3>Adresse</h3> 
+            {{order?.address.street}} {{order?.address.houseNr}}<br>
+            {{order?.address.zip}} {{order?.address.city}}<br>
+            {{order?.country}}<br>
+            <h3>Orderer</h3>
+            {{order?.orderer.firstname}} {{order?.orderer.lastname}}<br>
+            {{order?.email}}<br>
+            <h3>Produkte</h3>
+            <div *ngFor="let product of order.product">
+              ProduktID: {{product.id}} Anzahl: {{product.quantity}}               
+            </div>
+            <h3>Zahlungsmethode</h3>
+            {{order?.paymentMethod}}<br>
 
           </mat-card-content>
+          <!--
           <mat-card-actions align="start">
-            <button mat-stroked-button color="primary">Bearbeiten</button>
+           <button mat-stroked-button color="primary">Bearbeiten</button>  
 
           </mat-card-actions>
+          -->
           <mat-card-footer class="card-footer">
-            Bestellung Footer
+            Summe: {{order?.price/100 | currency:'EUR':'symbol'}}
           </mat-card-footer>
         </mat-card>
       </div>
