--- a/client/client/src/app/pages/dashboard/dashboard.component.css
+++ b/client/client/src/app/pages/dashboard/dashboard.component.css
@@ -11,8 +11,8 @@
 }
 
 .order-card {
-  max-width: 300px;
-  max-height: 700px;
+  max-width: 500px;
+  max-height: auto;
   border-radius: 1rem;
   margin: 5%;
 }
@@ -52,6 +52,14 @@ mat-form-field{
 
 #deleteBtn{
   margin-left: 2%;
+}
+
+.order-container{
+  margin-left: 10%;
+  width: 80%;
+  display:flex;
+  flex-direction: row;
+  flex-wrap: wrap
 }
 
 @media (min-width: 501px) {
